--- a/wetterfuchsbutton/Kontor-Wetter.css
+++ b/wetterfuchsbutton/Kontor-Wetter.css
@@ -1,14 +1,24 @@
 @namespace url(http://www.w3.org/1999/xhtml);
 @-moz-document domain(www.wetterkontor.net) {
-#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > H1,#wkRCol > TABLE > TBODY > TR:last-child > TD > DIV > P,#wkRCol > TABLE > TBODY > TR:last-child > TD > DIV > TABLE > TBODY > TR:last-child,.Td_header_forecast2,#socialshareprivacy,.cbox_470.cbpadding,.link_trend,#wkHeader,#wkGlobalNav,#wkFooter,.contentbox,.contentbox2,#mainbox,.mainbox,#globalNav,.lmenu,#___plusone_0,.rmenu,.footer_2011,/*.contentblock3,*/.text_klein,.divider,/*.header,*/#banner_470,.wk_details_header,.rmenu_noshadow,.link_rain,HTML > BODY > TABLE > TBODY > TR:nth-child(2) > TD:nth-child(2) > DIV > DIV:nth-child(14),HTML > BODY > TABLE > TBODY > TR:nth-child(2) > TD:first-child,HTML > BODY > TABLE > TBODY > TR:nth-child(2) > TD:last-child, /*Vorhersage DE*/ /*HTML > BODY > TABLE > TBODY > TR:nth-child(2) > TD:nth-child(2) > DIV > DIV:nth-child(9),*/.cbox_229,HTML > BODY > TABLE > TBODY > TR:nth-child(2) > TD:nth-child(2) > DIV > H2, HTML > BODY > TABLE > TBODY > TR:nth-child(3) > TD,.wk_details_header,.subheader,HTML > BODY > TABLE > TBODY > TR:nth-child(2) > TD:nth-child(2) > DIV > TABLE:nth-child(16) > TBODY > TR:first-child > TD:last-child > A,HTML > BODY > TABLE > TBODY > TR:nth-child(2) > TD:nth-child(2) > DIV > TABLE:nth-child(16) > TBODY > TR:first-child > TD:last-child > IMG,#main > TBODY > TR:nth-child(2) > TD:nth-child(2) > DIV > DIV:nth-child(15),#main > TBODY > TR:nth-child(2) > TD:nth-child(2) > DIV > DIV:last-child > TABLE,TD[colspan="2"],#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(14),#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:last-child > TABLE > TBODY > TR > TD:last-child {
+
+#wkHeader,#wkGlobalNav,#wkLCol,#wkFooter,.wk_details_header,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(4),#wkRCol > TABLE > TBODY > TR > TD:last-child > DIV:first-child,#wkRCol > TABLE > TBODY > TR > TD:last-child > DIV:nth-child(2),#wkRCol > TABLE > TBODY > TR > TD:last-child,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(8) > DIV,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(9) > H2,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(9) > DIV,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(11),#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(12),#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(14),#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(15),#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:last-child > TABLE > TBODY > TR > TD:last-child > P:first-child,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:last-child > TABLE > TBODY > TR > TD:last-child > P:nth-child(2),#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:last-child > TABLE > TBODY > TR > TD:last-child > P:last-child,.link_rain,.link_trend,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > TABLE:nth-child(16) > TBODY > TR:first-child > TD:last-child > IMG,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > TABLE:nth-child(16) > TBODY > TR:first-child > TD:last-child > A,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(18) > TABLE > TBODY > TR:last-child > TD {
+
 display: none !important;
 }
+
+#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(8), 
+#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(9) {
+width: 0px !important;
+}
+
 HTML > BODY > TABLE {
 width: 470px !important;
 max-width: 470px !important;
 }
+
 body{
 margin-left: -180px !important;
-/*overflow: hidden!important;*/
+overflow: hidden !important;
 }
+
 }
