CSS fuer MSN Wetter bitte einbinden (s. README)

--- a/wetterfuchsbutton/MSN Wetter.css
+++ b/wetterfuchsbutton/MSN Wetter.css
@@ -6,7 +6,7 @@ display: none !important;
 }
 
 #area1, #mediaarea {
-background-color: #E0FFFF !important;
+background-color: #BFEFFF !important;
 }
 
 body{
