--- a/wetterfuchsbutton/Das Wetter.css
+++ b/wetterfuchsbutton/Das Wetter.css
@@ -22,7 +22,6 @@ margin-left: 17px !important;}
 .sprite.nuevobuscador.img_buscador{
 background-image: none! important;
 background-color: #BFEFFF! important;}
-}
 #principal {
-width: 660px !important;)
+width: 660px !important;)}
 }
