CSS fuer Wetterkontor, bitte einbinden (s. README)

--- a/wetterfuchsbutton/Das Wetter.css
+++ b/wetterfuchsbutton/Das Wetter.css
@@ -23,5 +23,5 @@ margin-left: 17px !important;}
 background-image: none! important;
 background-color: #BFEFFF! important;}
 #principal {
-width: 660px !important;)}
+width: 660px !important;}
 }
