--- a/wetterfuchsbutton/wetterfuchsbutton.css
+++ b/wetterfuchsbutton/wetterfuchsbutton.css
@@ -1,7 +1,7 @@
 @namespace url(http://www.w3.org/1999/xhtml);
 
 @-moz-document domain(www.wetterkontor.net) {
-	#wkHeader,#wkGlobalNav,#wkLCol,#wkFooter,.wk_details_header,#wkRCol > TABLE > TBODY > TR > TD:last-child > DIV:first-child,#wkRCol > TABLE > TBODY > TR > TD:last-child > DIV:nth-child(2),#wkRCol > TABLE > TBODY > TR > TD:last-child,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(8) > DIV,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(9) > H2,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(9) > DIV,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(11),#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(12),#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(14),#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(15),#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:last-child > TABLE > TBODY > TR > TD:last-child > P:first-child,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:last-child > TABLE > TBODY > TR > TD:last-child > P:nth-child(2),#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:last-child > TABLE > TBODY > TR > TD:last-child > P:last-child,.link_rain,.link_trend,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > TABLE:nth-child(16) > TBODY > TR:first-child > TD:last-child > IMG,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > TABLE:nth-child(16) > TBODY > TR:first-child > TD:last-child > A,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(18) > TABLE > TBODY > TR:last-child > TD,#socialshareprivacy,.text_klein,.contentbox,.cbox_229,.cbox_470.cbpadding,.contentbox2,.header,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > H1,#banner_rechts,#banner_470,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(4) > DIV,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(4) > TABLE,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > P:nth-child(6), #wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > P:nth-child(7) {
+	#wkHeader,#wkGlobalNav,#wkLCol,#wkFooter,.wk_details_header,#wkRCol > TABLE > TBODY > TR > TD:last-child > DIV:first-child,#wkRCol > TABLE > TBODY > TR > TD:last-child > DIV:nth-child(2),#wkRCol > TABLE > TBODY > TR > TD:last-child,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(8) > DIV,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(9) > H2,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(9) > DIV,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(11),#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(12),#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(14),#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(15),#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:last-child > TABLE > TBODY > TR > TD:last-child > P:first-child,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:last-child > TABLE > TBODY > TR > TD:last-child > P:nth-child(2),#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:last-child > TABLE > TBODY > TR > TD:last-child > P:last-child ,.link_rain,.link_trend,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > TABLE:nth-child(16) > TBODY > TR:first-child > TD:last-child > IMG,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > TABLE:nth-child(16) > TBODY > TR:first-child > TD:last-child > A,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(18) > TABLE > TBODY > TR:last-child > TD ,#socialshareprivacy,.text_klein,.contentbox,.cbox_229,.cbox_470.cbpadding,.contentbox2,.header,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > H1,#banner_rechts,#banner_470,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(4) > DIV,#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(4) > TABLE {
 		display: none !important;
 	}
 	#wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(8), #wkRCol > TABLE > TBODY > TR > TD:first-child > DIV > DIV:nth-child(9) {
@@ -35,45 +35,26 @@
 		display: none !important;
 	}
 	.pred{
-		  margin-bottom: 5px !important;
+		margin-bottom: 5px !important;
 	}
 	#cookies {
-		  margin-right: 20px !important;
+		margin-right: 20px !important;
 	}
 		.ctemp,.loc.c1,.loc.c2,.loc.c3,.loc.c4 {
-		  margin-right: 30px !important;
+		margin-right: 30px !important;
 	}
 	body {
 		overflow: hidden !important;
 	}
 }
 
-@-moz-document domain(wetter.faz.net) {
-	#FAZHeader,.Breadcrumbs,.QuickSearchBox,#FAZContentRight,.ServicesFooter,#FAZFooter,.WetterHeaderContent,.BoxenReiter,#FAZPartnerContentInner > DIV:last-child,.ContentFooter,#getstag,#loginRequiredModal,#ivw,.clear,#WDC50ad41b8ac988_cities,#wx_nav > B,#wx_nav > BR:nth-child(2),.w_xs {
+@-moz-document domain(www.meteocentrale.ch) {
+	#header,#top,#left,#c8548,#right,#footer,#wetterapp_border > NOSCRIPT,#content > H1,#page > NOSCRIPT{
 		display: none !important;
 	}
-	#FAZSeite {
-		max-width: 555px !important;
-		max-height: 365px !important;
+	#wetterapp_border{
+		margin-left: -30px !important;
 		margin-top: -10px !important;
-	}
-	.WetterReiterContent {
-		margin-left: -9px !important;
-		margin-top: -5px !important;
-	}
-	.WetterRubrik  {
-		margin-top: -5px !important;
-	}
-	#choose_wx {
-		opacity: 0 !important;
-		width: 110px !important;
-		height: 100px !important;
-	}
-	#choose_wx:hover {
-		opacity: 0.7 !important;
-	}
-	#wx_link {
-		font-family: helvetica !important;
 	}
 	body {
 		overflow: hidden !important;
