--- a/wetterfuchsbutton/wetterfuchsbutton.css
+++ b/wetterfuchsbutton/wetterfuchsbutton.css
@@ -9,6 +9,7 @@
 	#content > DIV > DIV:first-child > H1, 
 	#content > DIV > DIV:first-child > ARTICLE > H2:nth-child(8), 
 	#content > DIV > DIV:first-child > ARTICLE > H2:nth-child(10),
+	#content > DIV > DIV:first-child > ARTICLE > DIV:last-child,
 	.uk-width-small-1-2.uk-width-medium-1-2, .cc_banner.cc_container.cc_container--open,
 	.uk-panel.uk-panel-box{display: none !important;}
 	
@@ -27,7 +28,10 @@
 	               url-prefix("http://www.wetterkontor.de/de/aktuelle-werte-deutschland-temperatur.asp"),
 				   url-prefix("http://www.wetterkontor.de/de/aktuelle-werte-deutschland-wind.asp"),
 				   url-prefix("http://www.wetterkontor.de/de/aktuelle-werte-deutschland-druck.asp"),
-				   url-prefix("http://www.wetterkontor.de/de/aktuelle-werte-deutschland-feuchte.asp")
+				   url-prefix("http://www.wetterkontor.de/de/aktuelle-werte-deutschland-feuchte.asp"),
+				   url-prefix("http://www.wetterkontor.de/de/aktuelle-werte-deutschland-gefuehlte-temperatur.asp"),
+				   url-prefix("http://www.wetterkontor.de/de/aktuelle-werte-deutschland-sichtweite.asp"),
+				   url-prefix("http://www.wetterkontor.de/de/aktuelle-werte-deutschland-sonnenscheindauer.asp")
 				   {
 	#header, H1, H2, P,  #content > DIV > DIV:first-child > ARTICLE > DIV:nth-child(3) > DIV:first-child > UL > LI:last-child, .uk-breadcrumb, .uk-width-large-2-5.uk-width-medium-1-3,  #wkFooter2, #content > DIV > DIV:first-child > DIV:nth-child(5), .uk-text-right.uk-text-small.uk-text-muted,
 	.uk-panel.uk-panel-box.uk-margin, #content > DIV > DIV:first-child > ARTICLE > DIV:nth-child(3) > DIV:first-child > UL > LI:first-child > A,
