Update wg. Aenderungen auf wetterkontor.de

--- a/wetterfuchsbutton/wetterfuchsbutton.css
+++ b/wetterfuchsbutton/wetterfuchsbutton.css
@@ -154,7 +154,7 @@
     #content > DIV > DIV:first-child > UL:nth-child(17) > LI:nth-child(2),
     #content > DIV > DIV:first-child > UL:nth-child(17) > LI:nth-child(3),
     #content > DIV > DIV:first-child > UL:nth-child(17) > LI:last-child       
-       {max-width: 150px !important; margin-left: 15px !important; margin-right: -15px !important;}
+    {max-width: 150px !important; margin-left: 15px !important; margin-right: -15px !important;}
         
     
     #warnungen > H2{margin-left: 10px !important;}
@@ -233,20 +233,20 @@
     body {overflow: hidden !important; }	
     } 
 	
-    @-moz-document url-prefix("http://www.wetterkontor.de/warnungen/land.asp?c=BY"),
-                   url-prefix("http://www.wetterkontor.de/warnungen/land.asp?c=BW"),
-                   url-prefix("http://www.wetterkontor.de/warnungen/land.asp?c=BB"),
-                   url-prefix("http://www.wetterkontor.de/warnungen/land.asp?c=HE"),
-                   url-prefix("http://www.wetterkontor.de/warnungen/land.asp?c=MV"),
-                   url-prefix("http://www.wetterkontor.de/warnungen/land.asp?c=NS_HB"),
-                   url-prefix("http://www.wetterkontor.de/warnungen/land.asp?c=NRW"),
-                   url-prefix("http://www.wetterkontor.de/warnungen/land.asp?c=RP_SL"),
-                   url-prefix("http://www.wetterkontor.de/warnungen/land.asp?c=SN"),
-                   url-prefix("http://www.wetterkontor.de/warnungen/land.asp?c=SA"),
-                   url-prefix("http://www.wetterkontor.de/warnungen/land.asp?c=SH_HH"),
-                   url-prefix("http://www.wetterkontor.de/warnungen/land.asp?c=TH"){
+    @-moz-document url-prefix("http://www.wetterkontor.de/warnungen/wetterwarnungen-bayern.asp"),
+                   url-prefix("http://www.wetterkontor.de/warnungen/wetterwarnungen-badenwuerttemberg.asp"),
+                   url-prefix("http://www.wetterkontor.de/warnungen/wetterwarnungen-brandenburg-berlin.asp"),
+                   url-prefix("http://www.wetterkontor.de/warnungen/wetterwarnungen-hessen.asp"),
+                   url-prefix("http://www.wetterkontor.de/warnungen/wetterwarnungen-mecklenburgvorpommern.asp"),
+                   url-prefix("http://www.wetterkontor.de/warnungen/wetterwarnungen-niedersachsen-bremen.asp"),
+                   url-prefix("http://www.wetterkontor.de/warnungen/wetterwarnungen-nordrheinwestfalen.asp"),
+                   url-prefix("http://www.wetterkontor.de/warnungen/wetterwarnungen-rheinlandpfalz-saarland.asp"),
+                   url-prefix("http://www.wetterkontor.de/warnungen/wetterwarnungen-sachsen.asp"),
+                   url-prefix("http://www.wetterkontor.de/warnungen/wetterwarnungen-sachsenanhalt.asp"),
+                   url-prefix("http://www.wetterkontor.de/warnungen/wetterwarnungen-schleswigholstein-hamburg.asp"),
+                   url-prefix("http://www.wetterkontor.de/warnungen/wetterwarnungen-thueringen.asp"){
 	
-    #header,H1, .uk-width-large-2-5.uk-width-medium-1-3.uk-hidden-small, .uk-text-right,  
+    #header,H1, .uk-width-large-2-5.uk-width-medium-1-3.uk-hidden-small, .uk-text-right, #content > DIV > DIV:first-child > P:nth-child(6),
     #content > DIV > DIV:first-child > ARTICLE > DIV:nth-child(3) > DIV:first-child > UL > LI:last-child, .uk-breadcrumb, 
     #wkFooter2, #content > DIV > DIV:first-child > DIV:nth-child(5), .uk-panel.uk-panel-box.uk-margin, 
     #content > DIV > DIV:first-child > P:nth-child(3), #content > DIV > DIV:first-child > P:nth-child(2), 
@@ -258,6 +258,7 @@
 	
     #karte {margin-left: -100px !important;}
     }
+	
 
     @-moz-document url-prefix("http://www.wetterkontor.de/de/wetter/europa/"){
     #header,H1, H2, .uk-width-large-2-5.uk-width-medium-1-3, .uk-text-right, .uk-text-muted, #content > DIV > DIV:first-child > ARTICLE >
@@ -358,8 +359,8 @@
     .fondoNB.color-fondo-flecha-12, .T1Loc.color-texto-t100-12, .ddHora.color-texto-t85-12, .ddDesc.T1Loc.color-texto-t100-12, 
     .ddTemp.T1Loc.color-texto-t100-12, .T1Loc.color-texto-t100-12, .T3Loc.color-texto-t70-12, .dayS.T3Loc.color-texto-t70-12, 
     .T2Loc.icons.tMax.color-texto-t90-12, .T2Loc.icons.tMin.color-texto-t90-12, .rain.T4Loc.color-texto-t50-12, 
-    .xh-dir.color-texto-t85-12, .xh-temp.color-texto-t90-12, #title_actualizacion, #fecha_act, #rmes > THEAD > TR > TH
-       {color: #FFFFFF !important;}
+    .xh-dir.color-texto-t85-12, .xh-temp.color-texto-t90-12, ABBR, #title_actualizacion, #fecha_act, #rmes > THEAD > TR > TH
+    {color: #FFFFFF !important;}
 	
     /*   Hintergrundfarbe Pfeil Links bzw. Rechts und anderes Symbol  */
 
@@ -412,7 +413,7 @@
     #rahmen_inhalt > TABLE > TBODY > TR:last-child,#topmenu > TBODY > TR:first-child,#zeitClient_Container,#buehne,#content_links > TABLE:first-child,
     #rahmen_inhalt > TABLE > TBODY > TR:nth-child(2),#rahmen_inhalt > TABLE > TBODY > TR:first-child,#wetterseite > NOSCRIPT,
     .tab_infos.inaktiv,#content_links > TABLE:last-child > TBODY > TR > TD > B,#content_links > TABLE:last-child > TBODY > TR > TD > A, 
-    #rahmen_inhalt > TABLE > TBODY > TR:nth-child(4), #rahmen_inhalt > TABLE > TBODY > TR:nth-child(5),.cc_banner-wrapper,.schatten_mitte{
+    #rahmen_inhalt > TABLE > TBODY > TR:nth-child(4), #rahmen_inhalt > TABLE > TBODY > TR:nth-child(5),.cc_banner-wrapper{
     display: none !important;
     }
     #topmenu {
